# tinyframe

./: .gitignore  .lgtm.yml  .travis.yml  CHANGES  Makefile.am  README.md  configure.ac  fmt.sh  libtinyframe.pc.in  sonar-project.properties.local
.github/workflows/: codeql.yml  sonarcloud.yml
debian/: changelog  control  copyright  libtinyframe-dev.install
rpm/: tinyframe.spec
src/: Makefile.am  tinyframe.c
src/test/: Makefile.am  test1.c  test1.sh  test2.c  test2.sh  test3.c  test3.sh
src/tinyframe/: tinyframe.h  tinyframe.h.in  version.h.in
